# dicentra-backend

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  RENDER.md  build.sh  build_files.sh  pyproject.toml  render.yaml  requirements.txt  start.sh  vercel.json
.github/workflows/: main.yml
config/: settings.py  urls.py
data/: models.py  serializers.py  urls.py  views.py
data/management/commands/: create_superuser.py
data/migrations/: 0001_initial.py  0002_auto_20211207_0007.py  0003_auto_20211208_0502.py  0004_alter_currentevent_message.py  0005_auto_20211208_2031.py  0006_alter_currentevent_image.py  0007_articlepost_content_image_third.py  0008_articlepost_caption_third.py  0009_auto_20211216_1052.py  0010_auto_20211219_1156.py  0011_auto_20211219_2357.py  0012_alter_articlepost_category.py  0013_auto_20211220_0648.py  0014_auto_20211229_2352.py  0015_alter_petpost_name.py  0016_alter_articlepost_options.py  0017_alter_articlepost_options.py  0018_auto_20220207_0816.py
data/tests/: test_models.py  test_views.py
